# dl-projeto-final

./: .gitignore  README.md  pyproject.toml
archive/thesis-ufu-mmp/divide/: test.txt  train.txt  val.txt
src/: train.py
src/models/: ssd.py
src/models/refinedlite/: loss.py  model.py  utils.py
src/new_dataset/: model-03-05.h5  model-03-05.keras  predictions.csv
src/new_dataset/test/: test.yaml  test_no_occluded.csv
src/new_dataset/train/: train.yaml  train_no_occluded.csv
src/notebooks/: 1-treat-visualize-classes.ipynb  2-change-data-folder.ipynb  2-train-cnn.ipynb  3-model_utils.py  3-treat-visualize-classes.ipynb  4-run_detection.py  4-train-cnn.ipynb  5-test.py  dataset.yaml  download-data.ipynb  maskrcnn.ipynb  refineDetLite.ipynb  t.ipynb  traffic-lights.ipynb  yolo-two-step.ipynb
src/notebooks/old/: 1-download-data.ipynb
src/utils/: dataset.py
