[project]
name = "dl-projeto-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "cython>=3.0.12",
    "flake8>=7.2.0",
    "h5py>=3.13.0",
    "imgaug>=0.4.0",
    "ipykernel>=6.29.5",
    "ipython[all]>=9.2.0",
    "keras>=2.0.8",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "opencv-python>=4.11.0.86",
    "openimages>=0.0.1",
    "pillow>=11.2.1",
    "pycocotools>=2.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "tensorboard>=2.19.0",
    "tensorflow>=1.3.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "wget>=3.2",
    "yacs>=0.1.8",
]
